<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2019 Moez Bhatti <moez.bhatti@gmail.com>
  ~
  ~ This file is part of QKSMS.
  ~
  ~ QKSMS is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ QKSMS is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with QKSMS.  If not, see <http://www.gnu.org/licenses/>.
  -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/detail_bg"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="8dp"
        android:background="?android:attr/divider" />

    <com.text.messages.sms.emoji.common.widget.PreferenceView
        android:id="@+id/groupName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:icon="@drawable/ic_people_black_24dp"
        app:title="@string/info_name" />


    <com.text.messages.sms.emoji.common.widget.PreferenceView
        android:id="@+id/archive"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_arch_vector"
        app:title="@string/info_archive"
        app:summary="@string/hides_it" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="70dp"
        android:background="?android:attr/divider" />

    <com.text.messages.sms.emoji.common.widget.PreferenceView
        android:id="@+id/notifications"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_notifications_black_24dp"
        app:title="@string/info_notifications"
        app:summary="@string/notify_when" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="70dp"
        android:background="?android:attr/divider" />

    <com.text.messages.sms.emoji.common.widget.PreferenceView
        android:id="@+id/block"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_action_block_blu"
        app:title="@string/info_block"
        app:summary="@string/unknown_number"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="70dp"
        android:background="?android:attr/divider" />

    <com.text.messages.sms.emoji.common.widget.PreferenceView
        android:id="@+id/delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_delete_white_24dp"
        app:title="@string/info_delete"
        app:summary="@string/delete_all_chat"/>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="?android:attr/divider" />

</LinearLayout>
