<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_splash"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="visible"
        app:layout_constraintVertical_weight="1">

        <ImageView
            android:id="@+id/icons"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_80sdp"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@drawable/ic_launcher_msg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/black_and_white"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@id/txt_sub"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/txt_sub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_50sdp"
            android:text="@string/simp_msg"
            android:textColor="@color/gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_default"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/img_start_icon"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:src="@drawable/ic_launcher_msg"
            app:layout_constraintBottom_toTopOf="@id/txt_start_title_s"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.text.messages.sms.emoji.common.widget.MessagesTextView
            android:id="@+id/txt_start_title_s"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/ac_black"
            android:textSize="@dimen/_25sdp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/cbPrivacy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:backgroundTint="@color/tools_theme"
            android:buttonTint="@color/tools_theme"
            android:gravity="start"
            android:lineSpacingExtra="@dimen/_3sdp"
            android:text="@string/by_taaping"
            android:textColor="@color/con_for"
            android:textColorHighlight="@color/transparent"
            android:textSize="@dimen/_10sdp"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/btn_get_start"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.text.messages.sms.emoji.common.widget.MessagesTextView
            android:id="@+id/txt_start_privacy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="18dp"
            android:text="@string/privacy_policy"
            android:textColor="@color/ads_install_color"
            android:textSize="@dimen/_10sdp"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@id/btn_get_start"
            app:layout_constraintStart_toStartOf="@id/cbPrivacy"
            android:layout_marginStart="@dimen/_27sdp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_get_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_50sdp"
            android:background="@drawable/rounded_corner_grey_bg"
            android:text="@string/button_continue"
            android:textColor="@color/white"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>