<?xml version="1.0" encoding="utf-8"?>
<com.google.android.gms.ads.nativead.NativeAdView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/ads_color_white"
        android:orientation="vertical"
        android:paddingTop="7dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/media_lay"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:gravity="center"
                android:paddingVertical="10dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="5dp">

                <RelativeLayout
                    android:id="@+id/ad_app_icon_Lay"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/ad_app_icon"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerInParent="true" />

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/ad_app_icon_Lay"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp">

                    <TextView
                        android:id="@+id/ad_headline"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:lines="1"
                        android:singleLine="true"
                        android:text="@string/in_app_name"
                        android:textColor="@color/ads_color_black"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/txtAd"
                            android:layout_width="23dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="top"
                            android:background="@drawable/ads_rounded_tag_bg"
                            android:gravity="center"
                            android:paddingVertical="2dp"
                            android:text="@string/ads_txt_ads"
                            android:textColor="@android:color/darker_gray"
                            android:textSize="8sp" />

                        <TextView
                            android:id="@+id/ad_body"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="top"
                            android:layout_marginStart="5dp"
                            android:ellipsize="end"
                            android:gravity="center_vertical"
                            android:maxLines="2"
                            android:text="@string/app_name"
                            android:textColor="@android:color/darker_gray"
                            android:textSize="10sp" />

                    </LinearLayout>

                </LinearLayout>

            </RelativeLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/ad_call_to_action"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/ads_rounded_corner_bg"
                android:gravity="center"
                android:text="@string/ads_install"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/md_divider_black" />

    </LinearLayout>

</com.google.android.gms.ads.nativead.NativeAdView>